# WildFireClassification

./: .gitignore  README.md  main.py  pyproject.toml  run_cosine_similarity.py  run_curacao_dados.py  run_gradcam_resnet50.py  run_multi_seed.py  run_pcl.py  run_tscam.py  run_umap.py  run_wsddn.py  vis_bb_predictions.py
app/: LoRA.py  __init__.py  detection_utils.py  dino_classifier.py  dino_detector.py  multi_start.py
backbones/dinov2/data/: loaders.py
backbones/dinov2/layers/: block.py
core/: __init__.py  attention_map.py  attention_rollout.py  debug.py  evaluation.py  gradcam.py  losses.py  lr_scheduler.py  vis.py  vis_graph.py  vis_utils.py
core/config/: config.py  config.yaml
core/datasets/: __init__.py  datasets.py  nwpu_dataset.py
core/losses/: __init__.py
core/metrics/: metrics.py
core/models/: LoRA.py  __init__.py  custom_models.py  dino_classifier.py  dinov3_classifier.py  models.py
core/postproc/: __init__.py  crf_refiner.py
core/training/: __init__.py  contrastive_engine.py  ema.py  engine.py  evaluation.py
core/utils/: __init__.py  debug.py  utils.py
core/visualization/: __init__.py  gradcam.py  vis.py
interface/: __init__.py  api.py
layers/: attention.py
models/: vision_transformer.py
tests/: conftest.py  test_datasets.py  test_engine.py  test_evaluation.py  test_losses.py  test_metrics.py
utils/: compare_attention.py  convert.py  convert_dior.py  convert_dior_to_coco.py  convert_fire_to_coco.py  convert_model_rs.py  convert_nwpu.py  convert_nwpu_to_coco.py  histogram_iou.ipynb  histogram_iou.py  plot_iou.py
(+5 files in other folders)
