[project]
name = "fireclassification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jupyter",
  "torch",
  "einops",
  "pytorch-metric-learning",
  "tqdm",
  "timm",
  "tensorboardX",
  "grad-cam",
  "pycocotools",
  "labelme",
  "labelme2coco",
  "grad-cam",
  "seaborn",
  "pyyaml",
  "transformers",
  "plotly",
  "pandas",
  "scikit-learn",
  "umap-learn",
  "opencv-python",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
  "ignore::UserWarning",
  "ignore::FutureWarning",
  "ignore::DeprecationWarning",
]
